# backend

./: pyproject.toml  sales_data.csv
app/: main.py
app/api/v1/: api.py
app/api/v1/routes/: analytics.py  auth.py  createUser.py
app/core/: exceptions.py
app/routes/: analytics.py  auth.py  createUser.py
app/services/: analytics_service.py
app/utils/: db.py  jwt.py
